[gd_scene load_steps=23 format=2]

[ext_resource path="res://files/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://files/TextScene/TextSystem.gd" type="Script" id=2]
[ext_resource path="res://assets/images/backgrounds/forge.png" type="Texture" id=3]
[ext_resource path="res://files/SFX/black.png" type="Texture" id=4]
[ext_resource path="res://assets/images/sprites/goblin.png" type="Texture" id=5]
[ext_resource path="res://assets/images/gui/text scene/textfieldpanel.png" type="Texture" id=6]
[ext_resource path="res://Roundo-Medium.otf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/images/gui/text scene/textbuttonhl.png" type="Texture" id=8]
[ext_resource path="res://assets/images/gui/text scene/textbuttonpressed.png" type="Texture" id=9]
[ext_resource path="res://assets/images/gui/text scene/textbutton.png" type="Texture" id=10]
[ext_resource path="res://assets/images/gui/text scene/namepanel.png" type="Texture" id=11]
[ext_resource path="res://assets/images/gui/text scene/portraitpanel.png" type="Texture" id=12]
[ext_resource path="res://assets/images/gui/text scene/logpanel.png" type="Texture" id=13]
[ext_resource path="res://src/MenuPanel.tscn" type="PackedScene" id=14]

[sub_resource type="DynamicFont" id=1]

size = 40
use_mipmaps = false
use_filter = true
font_data = ExtResource( 7 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="StyleBoxTexture" id=2]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 138, 68 )
margin_left = 0.0
margin_right = 0.0
margin_top = 0.0
margin_bottom = 0.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true

[sub_resource type="StyleBoxTexture" id=3]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 138, 68 )
margin_left = 0.0
margin_right = 0.0
margin_top = 0.0
margin_bottom = 0.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true

[sub_resource type="StyleBoxTexture" id=4]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
margin_left = 0.0
margin_right = 0.0
margin_top = 0.0
margin_bottom = 0.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true

[sub_resource type="StyleBoxTexture" id=5]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
margin_left = 0.0
margin_right = 0.0
margin_top = 0.0
margin_bottom = 0.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true

[sub_resource type="StyleBoxTexture" id=6]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 138, 68 )
margin_left = 0.0
margin_right = 0.0
margin_top = 0.0
margin_bottom = 0.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true

[sub_resource type="DynamicFont" id=7]

size = 32
use_mipmaps = false
use_filter = true
font_data = ExtResource( 7 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="StyleBoxTexture" id=8]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
texture = ExtResource( 13 )
region_rect = Rect2( 0, 0, 1171, 788 )
margin_left = 0.0
margin_right = 0.0
margin_top = 0.0
margin_bottom = 0.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true

[node name="TextSystem" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 1 )
script = ExtResource( 2 )
_sections_unfolded = [ "Theme" ]

[node name="Tween" type="Tween" parent="." index="0"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Background" type="TextureRect" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
expand = true
stretch_mode = 7


[node name="BlackScreen" type="TextureRect" parent="." index="2"]

modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 421.0
margin_right = 1501.0
margin_bottom = 1080.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
expand = true

stretch_mode = 0
_sections_unfolded = [ "Anchor", "Visibility" ]


[node name="BlackScreen" type="Panel" parent="." index="3"]

modulate = Color( 0, 0, 0, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

texture = ExtResource( 5 )
expand = true
stretch_mode = 6
_sections_unfolded = [ "Rect" ]


[node name="Panel" type="TextureRect" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 448.0
margin_top = 849.0
margin_right = 1718.0
margin_bottom = 1088.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 6 )
stretch_mode = 0
_sections_unfolded = [ "Visibility" ]

[node name="DisplayText" type="RichTextLabel" parent="Panel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 43.0
margin_top = 30.0
margin_right = 1064.0
margin_bottom = 212.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "A test text"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "A test text"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "Visibility", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="Log" type="Button" parent="Panel" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1095.0
margin_top = 32.0
margin_right = 1233.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Log"
flat = false
align = 1
_sections_unfolded = [ "Textures", "custom_styles" ]

[node name="Options" type="Button" parent="Panel" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1095.0
margin_top = 131.0
margin_right = 1233.0
margin_bottom = 199.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Options"
flat = false
align = 1
_sections_unfolded = [ "Textures", "custom_styles" ]

[node name="DisplayName" type="TextureRect" parent="Panel" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -12.0
margin_top = -62.0
margin_right = 441.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 11 )
stretch_mode = 0
_sections_unfolded = [ "Visibility" ]

[node name="Label" type="Label" parent="Panel/DisplayName" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 104.0
margin_top = 32.0
margin_right = 381.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 0.823822, 0.0195313, 1 )
text = "Name"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="CharPortrait" type="TextureRect" parent="Panel" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -310.0
margin_top = -164.0
margin_right = -14.0
margin_bottom = 201.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
stretch_mode = 7
_sections_unfolded = [ "Rect" ]

[node name="Panel" type="TextureRect" parent="Panel/CharPortrait" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -19.0
margin_top = -15.0
margin_right = 312.0
margin_bottom = 395.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 12 )
stretch_mode = 0
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="ChoicePanel" type="Panel" parent="." index="5"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 541.0
margin_top = 122.0
margin_right = 1415.0
margin_bottom = 729.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Theme", "custom_styles" ]

[node name="VBoxContainer" type="VBoxContainer" parent="ChoicePanel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 40.0
margin_right = 853.0
margin_bottom = 412.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 18
alignment = 0
_sections_unfolded = [ "custom_constants" ]

[node name="Button" type="Button" parent="ChoicePanel/VBoxContainer" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 833.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="LogPanel" type="Panel" parent="." index="6"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 358.0
margin_top = 30.0
margin_right = 1529.0
margin_bottom = 818.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/panel = SubResource( 8 )
_sections_unfolded = [ "custom_styles" ]

[node name="RichTextLabel" type="RichTextLabel" parent="LogPanel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 39.0
margin_top = 145.0
margin_right = 1138.0
margin_bottom = 735.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = SubResource( 7 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas molestie dolor et commodo pulvinar. Nam ac nisl quis mauris malesuada commodo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Etiam semper venenatis elit, eget venenatis velit dictum mattis. Etiam pharetra erat sed dui eleifend, et vehicula nulla faucibus. Pellentesque ut dolor vel augue aliquet tincidunt eu vitae purus. Nullam tristique posuere dolor vel tincidunt. Sed sit amet ante quis lectus fringilla mollis. Quisque ac nisl purus. Nullam gravida pretium nisi. Maecenas imperdiet sed tortor eu interdum.

Aliquam laoreet placerat nulla, in auctor velit scelerisque lacinia. Vivamus pharetra nec enim vel tempor. Nullam nibh lectus, fermentum suscipit nunc id, volutpat ultricies metus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed id ultricies urna, non fermentum odio. Curabitur leo neque, convallis sit amet turpis vitae, pellentesque hendrerit quam. Nulla facilisi. Cras scelerisque bibendum facilisis. Cras tristique facilisis erat. Vivamus sit amet eros molestie, scelerisque lectus sed, sodales orci. Quisque ut libero sit amet quam pharetra malesuada a sit amet magna.

Nunc justo nunc, congue eu tincidunt eu, varius vel tellus. Donec bibendum elementum auctor. Morbi felis nisi, posuere vitae nibh et, sagittis volutpat mauris. Morbi bibendum faucibus nulla quis tempor. Etiam porttitor quam sed malesuada sollicitudin. Curabitur porta elementum quam ac lacinia. Mauris luctus vel turpis vel rhoncus. In ex risus, elementum non finibus ut, auctor non ipsum. Proin dictum gravida est ac efficitur. Nam quis sapien cursus, rhoncus diam aliquet, semper nibh. Suspendisse potenti. Vestibulum commodo, justo ac dapibus molestie, libero tellus cursus tortor, a consectetur arcu odio in est. Donec quis elit a erat sodales vulputate.

Etiam sodales, turpis id finibus tincidunt, urna augue cursus magna, quis rutrum felis mi sed arcu. Etiam viverra ac est vestibulum posuere. Suspendisse eget libero ac velit rutrum semper at a augue. Praesent lorem magna, lobortis eget justo a, accumsan bibendum ex. Pellentesque eget leo et mi aliquet sagittis ut sit amet libero. Praesent sagittis vel augue non aliquet. Vivamus posuere mauris ut lobortis facilisis. Mauris eget malesuada lorem. Sed condimentum tincidunt dignissim. Nullam dapibus mauris eget orci aliquam, at lacinia augue porta. Proin mattis sem et vulputate dictum. Sed at erat sem. Sed lacinia lectus non pretium convallis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aliquam erat volutpat. Quisque quis leo ut elit laoreet tincidunt et in velit.

In aliquam augue tellus, ut aliquam nisi condimentum id. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc eros enim, semper ut condimentum ultrices, placerat et turpis. Proin at felis sed ex malesuada congue. Ut quis feugiat urna, nec sodales arcu. Morbi dignissim massa felis, in varius massa faucibus vitae. Proin ut eleifend felis. Etiam imperdiet velit non dictum consectetur. Maecenas id mattis risus. Cras quis ante mollis, pulvinar eros eu, dapibus dui. Integer massa est, scelerisque at placerat eu, interdum eget urna. Vestibulum nunc justo, tristique vitae eros non, efficitur auctor lorem. Praesent porttitor nibh vitae purus aliquet, quis dignissim lorem laoreet. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed in arcu sollicitudin, bibendum arcu sed, fringilla nibh. Quisque pulvinar convallis elit quis aliquam."
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas molestie dolor et commodo pulvinar. Nam ac nisl quis mauris malesuada commodo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Etiam semper venenatis elit, eget venenatis velit dictum mattis. Etiam pharetra erat sed dui eleifend, et vehicula nulla faucibus. Pellentesque ut dolor vel augue aliquet tincidunt eu vitae purus. Nullam tristique posuere dolor vel tincidunt. Sed sit amet ante quis lectus fringilla mollis. Quisque ac nisl purus. Nullam gravida pretium nisi. Maecenas imperdiet sed tortor eu interdum.

Aliquam laoreet placerat nulla, in auctor velit scelerisque lacinia. Vivamus pharetra nec enim vel tempor. Nullam nibh lectus, fermentum suscipit nunc id, volutpat ultricies metus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed id ultricies urna, non fermentum odio. Curabitur leo neque, convallis sit amet turpis vitae, pellentesque hendrerit quam. Nulla facilisi. Cras scelerisque bibendum facilisis. Cras tristique facilisis erat. Vivamus sit amet eros molestie, scelerisque lectus sed, sodales orci. Quisque ut libero sit amet quam pharetra malesuada a sit amet magna.

Nunc justo nunc, congue eu tincidunt eu, varius vel tellus. Donec bibendum elementum auctor. Morbi felis nisi, posuere vitae nibh et, sagittis volutpat mauris. Morbi bibendum faucibus nulla quis tempor. Etiam porttitor quam sed malesuada sollicitudin. Curabitur porta elementum quam ac lacinia. Mauris luctus vel turpis vel rhoncus. In ex risus, elementum non finibus ut, auctor non ipsum. Proin dictum gravida est ac efficitur. Nam quis sapien cursus, rhoncus diam aliquet, semper nibh. Suspendisse potenti. Vestibulum commodo, justo ac dapibus molestie, libero tellus cursus tortor, a consectetur arcu odio in est. Donec quis elit a erat sodales vulputate.

Etiam sodales, turpis id finibus tincidunt, urna augue cursus magna, quis rutrum felis mi sed arcu. Etiam viverra ac est vestibulum posuere. Suspendisse eget libero ac velit rutrum semper at a augue. Praesent lorem magna, lobortis eget justo a, accumsan bibendum ex. Pellentesque eget leo et mi aliquet sagittis ut sit amet libero. Praesent sagittis vel augue non aliquet. Vivamus posuere mauris ut lobortis facilisis. Mauris eget malesuada lorem. Sed condimentum tincidunt dignissim. Nullam dapibus mauris eget orci aliquam, at lacinia augue porta. Proin mattis sem et vulputate dictum. Sed at erat sem. Sed lacinia lectus non pretium convallis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aliquam erat volutpat. Quisque quis leo ut elit laoreet tincidunt et in velit.

In aliquam augue tellus, ut aliquam nisi condimentum id. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc eros enim, semper ut condimentum ultrices, placerat et turpis. Proin at felis sed ex malesuada congue. Ut quis feugiat urna, nec sodales arcu. Morbi dignissim massa felis, in varius massa faucibus vitae. Proin ut eleifend felis. Etiam imperdiet velit non dictum consectetur. Maecenas id mattis risus. Cras quis ante mollis, pulvinar eros eu, dapibus dui. Integer massa est, scelerisque at placerat eu, interdum eget urna. Vestibulum nunc justo, tristique vitae eros non, efficitur auctor lorem. Praesent porttitor nibh vitae purus aliquet, quis dignissim lorem laoreet. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed in arcu sollicitudin, bibendum arcu sed, fringilla nibh. Quisque pulvinar convallis elit quis aliquam."
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "custom_colors" ]

[node name="MenuPanel" parent="." index="7" instance=ExtResource( 14 )]

visible = false
margin_left = 740.0
margin_top = 160.0
margin_right = 1106.0
margin_bottom = 602.0


